# vehicle_automation_system

./: Cargo.toml  README.md  index.html  index.js  main.js  package-lock.json  package.json  style.css
src/: command.rs  error.rs  input.rs  main.rs  output.rs  vehicle.rs
