[package]
name = "vehicle_automation"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A vehicle automation system using Rust"

[dependencies]
crossterm = "0.27.0"  # For terminal color and input handling
chrono = "0.4.31"     # For timestamps in logs